--- a/miniRoutingMaster/mini-routing/index.html
+++ b/miniRoutingMaster/mini-routing/index.html
@@ -25,11 +25,13 @@
     <div class="view-container">
         <div ui-view></div>
     </div>
-	<script src="http://cdnjs.com/libraries/angular-ui-router">
-	</script>
- 	<script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.5/angular.js">
-	</script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.5/angular.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.15/angular-ui-router.js"></script>
 	<script src="js/app.js"></script>
+    <script src="js/products/productsCtrl.js"></script>    
+    <script src="js/products/productService.js"></script>
+    <script src="js/home/homeCtrl.js"></script>
+    <script src="js/settings/settingsCtrl.js"></script>
 </body>
 
 </html>
