--- a/nbaRoutesMaster/js/teams/teamTmpl.html
+++ b/nbaRoutesMaster/js/teams/teamTmpl.html
@@ -1,6 +1,19 @@
+<!--STEP 5: Set up for teamTmpl file-->
+<!-- I -->
+<!--Now is the fun part. If everything is working correctly, 
+our team controller and team service should be set up and now all 
+we need to do is put that data onto the view. Head over to your 
+teamTmpl.html file and check it out.-->
+
+<!-- 1 -->
+<!--Notice that there are a lot of $__FIXME__$. 
+All of those need to be filled in with properties that are on the teamCtrl. 
+This could be really hard or really easy depending on how you tackle the problem.
+If it were me, I would console.log the $scope object to see all the properties that you're able to use.-->
+
 <div class="inner-container">
     <div class="logo">
-        <img ng-src="$__FIXME__$">
+        <img ng-src="">
     </div>
     <div class="record">
         <h1> Wins: ???????? Losses: ???????? </h1>
@@ -32,3 +45,5 @@
         </div>
     </div>
 </div>
+
+
