--- a/nbaRoutesMaster/index.html
+++ b/nbaRoutesMaster/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title> NBA Router </title>
+    <title> JT's NBA Router </title>
     <link rel="stylesheet" type="text/css" href="style.css">
     <link href='http://fonts.googleapis.com/css?family=Lato:300italic' rel='stylesheet' type='text/css'>
 </head>
